# Gait_tracking

./: 1.avi  1r.avi  2.avi  BGS_tracking.cpp  BGS_tracking.cpp~  BGS_tracking.h  Boundingbox.cpp  Boundingbox.h  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  Projects1  cmake_install.cmake  extract_contour.cpp~  header.h  initializebgs.cpp~  initializebgs.h~  main2.cpp  mouse_callback.cpp
bgslibrary-opencv3/: CMakeCache.txt  CMakeLists.txt~  Makefile  cmake_install.cmake
bgslibrary-opencv3/package_bgs/: FrameDifferenceBGS.cpp  FrameDifferenceBGS.h  MixtureOfGaussianV2BGS.cpp  MixtureOfGaussianV2BGS.cpp~
bgslibrary-opencv3/package_bgs/dp/: DPPratiMediodBGS.cpp  DPWrenGABGS.cpp
bgslibrary-opencv3/package_bgs/jmo/: MultiLayerBGS.cpp
